Fri Mar 10 14:10:00 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - docs/FAQ: removed entry that is no longer applicable, since
   starting from version 1.4.0, upsd will no longer be able to
   startup in this particular case (it changes UID before reading the
   configuration files)
 - drivers/genericups.c: fixes Alioth bug #302338 (genericups: custom
   configuration through ups.conf not working)
 - man/genericups.8: remove the "connection monitoring" chapter from
   the man page (the code to perform this never made it into the driver)

Fri Mar 10 08:56:00 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - client/upsrw.c: swapped parameters in memset() call
 - drivers/tripplite_usb.c: off-by-one buffer overflow

Sun Feb 12 11:54:57 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups: rewrote logical-to-physical value conversion. Rewrote
   extraction of logical values from report. Added Kelvin-to-Celsius
   conversion. Tweaked APC date conversion. Back-UPS BF500 support.  
   Deleted unused items in HIDItem structure.

2.0.3

Tue Feb 07 10:47:01 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - update configure.in, install.sh, include/version* and NEWS
 - several minor fixes

Tue Jan 24 20:40:34 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - safenet: improve robustness, add minimal hardware detection and
   improve the error handling
 - bestfcom, tripplite: fix the "array subscript out of range" bug
   (https://bugzilla.novell.com/show_bug.cgi?id=133610)

   (Arjen de Korte)

Mon Jan 23 08:48:13 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - README, INSTALL, NEWS: more update on USB and other points.

Fri Jan 20 18:51:53 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - FAQ: update a bit more USB support and SNMP information

Wed Jan 18 23:56:12 UTC 2006 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - added "Tecnoware Easy Power 1200" to "powermust.8" and driver.list
